Fix javaJaxRS api template: regenerate samples